--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -38,31 +38,31 @@ main {
 	margin: 0px auto;
 }
 
-main #nosotros{
-    width: 90%;
+main #nosotros,
+main #VyM,
+main #principios{
+  width: 90%;
   margin: 5px 5%;
+	/*border: solid 1px green;*/
+}
+
+main #nosotros .autores{
+	margin-bottom: 50px;
 }
 
 .textoSubtitulos{
   font-weight: bold;
   color: #2E9AFE;
-  font-size: 1.3rem;
+  font-size: 1.4rem;
 }
 
 .citas{
   font-size: 2rem;
   font-weight: bold;
   text-align: center;
+	line-height: normal;
 }
 
-
-.citas br{
-  display: none;
-}
-
-#nosotros .autores .imagenCita{
-  overflow: hidden;
-}
 
 #nosotros .autores div img{
   width: 100px;
@@ -70,13 +70,50 @@ main #nosotros{
   border-radius: 50%;
 }
 
-#nosotros .autores .coFounder p {
+#nosotros .autores div p {
+	margin-left: 1rem;
   text-align: center;
   font-weight: bold;
 }
 
-#nosotros .autores .coFounder p span{
+#nosotros .autores div p span{
   font-size: 12px;
+}
+
+#VyM .visionymision{
+	margin-top: 20px;
+	margin-bottom: 30px;
+}
+
+#VyM .row div p{
+	font-weight: bold;
+}
+
+#VyM .franja{
+	height: 25px;
+	background: #2E9AFE;
+}
+
+#principios .principios{
+	margin-bottom: 40px;
+	box-sizing: border-box;
+}
+
+#principios .principios img{
+	max-height: 150px;
+	width: 98%;
+	margin: 5px 1%;
+}
+
+#principios .principios p{
+	width: 98%;
+	margin: 5px 1%;
+	font-size: 1.1rem;
+}
+
+#principios .principios p span{
+	font-weight: bold;
+	font-size: 1.3rem;
 }
 
 footer {
@@ -93,7 +130,15 @@ footer ul li{
 
 @media (min-width: 600px) {
 	body {
-		background: red;
+		/*background: red;*/
+	}
+
+	#nosotros .citas {
+		font-size: 2.8rem;
+	}
+
+	#principios .principios{
+		margin-bottom: 20px;
 	}
 
   footer ul{
@@ -116,7 +161,7 @@ footer ul li{
 
 @media (min-width: 992px) {
 	body {
-		background: yellow;
+		/*background: yellow;*/
   }
 
   header nav .brand-logo{
@@ -124,6 +169,9 @@ footer ul li{
       color: #000000;
   }
 
+	#nosotros .citas {
+		font-size: 3.5rem;
+	}
 
 }
 
@@ -132,6 +180,10 @@ footer ul li{
 
 @media (min-width: 1200px) {
 	body {
-		background: blue;
+		/*background: blue;*/
+	}
+
+	#nosotros .citas {
+
 	}
 }
