Versión Final sin Js
Casi todas las imagenes subidas, falta agregar funcionalidades.

Saludos,

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,10 +79,39 @@ main .tarjetas .large{
 	display: block;
 	width: 100%;
 	margin: 5px .5%;
-	background-image: url(../img/paris.jpg);
 	background-size:100% 100%;
 	background-repeat: no-repeat;
 	background-position: center top;
+}
+
+main #cuadro1{
+	background-image: url(../img/cuadro1.jpg);
+}
+
+main #cuadro2{
+	background-image: url(../img/cuadro2.jpg);
+}
+
+main #cuadro3{
+	background-image: url(../img/cuadro3.jpg);
+}
+main #cuadro4{
+	background-image: url(../img/cuadro4.png);
+}
+main #cuadro5{
+	background-image: url(../img/cuadro5.jpg);
+}
+main #cuadro6{
+	background-image: url(../img/cuadro6.jpg);
+}
+main #cuadro7{
+	background-image: url(../img/cuadro7.jpg);
+}
+main #cuadro8{
+	background-image: url(../img/cuadro8.jpg);
+}
+main #cuadro9{
+	background-image: url(../img/cuadro9.jpg);
 }
 
 main .tarjetas .large .card-image{
@@ -106,8 +135,7 @@ main .tarjetas .large .card-image .tituloTarjeta{
 	text-align: center;
 }
 
-main .tarjetas .large .card-image .tituloTarjeta h4,
-main .tarjetas .large .card-image .tituloTarjeta i{
+main .tarjetas .large .card-image .tituloTarjeta h4{
 	color: #fff;
 }
 
@@ -115,16 +143,57 @@ main .tarjetas .large .card-image .tituloTarjeta .btn{
 	background: #2bbbad;
 	font-weight: bold;
 }
-
+main .tarjetas .large .card-image:hover .tituloTarjeta h4{
+	background: rgba(255, 255, 255, 0.8);
+	color: #2bbbad;
+}
 main .tarjetas .large .card-image:hover .tituloTarjeta .btn{
 	background: #fff;
 	color: #2bbbad;
 }
 
+main .tarjetas .large .card-reveal span{
+	font-weight: bold;
+}
+
+main .tarjetas .large .card-reveal .programas{
+	margin: 20px auto;
+}
+
+main .tarjetas .large .card-reveal .row .imagenPrograma img{
+	width: 100%;
+	height: 280px;
+	margin: 5px auto;
+}
+
+main .tarjetas .large .card-reveal .itemPrograma .tituloItemPrograma{
+	font-size: 1.3rem;
+}
+
+main .tarjetas .large .card-reveal .itemPrograma div a{
+	margin-right: 10px;
+}
+
+main .tarjetas .large .card-reveal .itemPrograma div a i{
+	color: #00a2ff;
+	font-size: 35px;
+
+}
+
+main .tarjetas .large .card-reveal .itemPrograma div {
+	margin-top: 10px;
+}
+
+main .tarjetas .large .card-reveal .metaKiris{
+	margin-top: 15px;
+	font-weight: bold;
+	font-size: 2rem;
+}
+
 footer {
   background: rgb(0, 0, 0) !important;
   font-size: 14px;
-	margin-top: 15px;
+		margin-top: 15px;
 }
 
 footer ul li{
