--- a/css/styles2.css
+++ b/css/styles2.css
@@ -13,6 +13,10 @@ body {
 	min-height: 100vh;
 	flex-direction: column;
 }
+
+.divider{
+	height: 3px;
+}
 header nav{
 	background: rgb(255, 255, 255);
 }
@@ -52,6 +56,7 @@ main #mundo,
 main #equipo{
   width: 90%;
   margin: 40px 5%;
+	padding-top: 10px;
 	/*border: solid 1px green;*/
 }
 
@@ -66,19 +71,21 @@ main #nosotros .autores{
 
 .textoSubtitulos{
   font-weight: bold;
-  color: #2E9AFE;
-  font-size: 1.4rem;
+  color: #2bbbad;
+  font-size: 2rem;
+	display: block;
+	margin-bottom: 12px;
+	padding: 0;
 }
 
 .citas{
-  font-size: 2rem;
+  font-size: 2.3rem;
   font-weight: bold;
-  text-align: center;
+  text-align: right;
 	line-height: normal;
 }
 
-
-#nosotros .autores div img{
+/*#nosotros .autores div img{
   width: 100px;
   height: 100px;
   border-radius: 50%;
@@ -92,6 +99,23 @@ main #nosotros .autores{
 
 #nosotros .autores div p span{
   font-size: 12px;
+}*/
+
+#nosotros div img{
+	margin-left: auto;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+	display: inline-block;
+}
+
+#nosotros div p {
+	margin-left: 1rem;
+  font-weight: bold;
+}
+
+#nosotros div p span{
+  font-size: 12px;
 }
 
 #VyM .visionymision{
@@ -103,10 +127,14 @@ main #nosotros .autores{
 	font-weight: bold;
 }
 
-#VyM .franja{
-	height: 25px;
-	background: #2E9AFE;
+#VyM .textoSubtitulos{
+	margin: 0;
 }
+
+/*#VyM .franja{
+	height: 25px;
+	background: #2bbbad;
+}*/
 
 #principios .principios{
 	margin-bottom: 40px;
@@ -123,7 +151,7 @@ main #nosotros .autores{
 
 #servicios .soyUna{
 	min-height: 200px;
-	background: #2E9AFE;
+	background: #2bbbad;
 	min-width: 200px;
 }
 
@@ -185,7 +213,7 @@ main #nosotros .autores{
 }
 
 #mundo .compromisos div i{
-	color: #2E9AFE;
+	color: #2bbbad;
 	font-size: 35px;
 }
 
@@ -199,7 +227,7 @@ main #nosotros .autores{
 }
 
 #mundo a i{
-	color: #2E9AFE;
+	color: #2bbbad;
 	font-size: 35px;
 }
 
@@ -257,7 +285,7 @@ main #nosotros .autores{
 
 #equipo .iconoIr i{
 	font-size: 35px;
-	background: #2E9AFE;
+	background: #2bbbad;
 	color: #fff;
 	border-radius: 50%;
 }
